refactor: change route users to account
